--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -31,7 +31,7 @@
         <div class="birthday-div">
           <ion-icon class="birthday-icon" src="../../../assets/streamline/birthday-cake-1.svg"></ion-icon>&nbsp;&nbsp;
           <p class="birthday"><strong>{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') |
-              dateSuffix}}</strong></p>
+              dateSuffixPipe}}</strong></p>
           <div>
           </div>
         </div>
@@ -71,7 +71,7 @@
       <div class="right-top-profile-wrapper">
         <div class="birthday-div">
           <div><ion-icon class="birthday-icon" src="../../../assets/streamline/birthday-cake-1.svg"></ion-icon></div>&nbsp;&nbsp;
-          <p class="birthday"><strong class="edit-birthday">{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') | dateSuffix}}</strong></p>
+          <p class="birthday"><strong class="edit-birthday">{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') | dateSuffixPipe}}</strong></p>
         </div>
         <div class="right-top-profile">
           <div class="stats-div">
