--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -81,6 +81,7 @@ ion-card {
     justify-content: space-between;
     align-items: center;
     margin: 0.5em 1em;
+    z-index: 1;
 
     .last-post {
       font-size: 0.85em;
@@ -352,4 +353,112 @@ ion-row {
     padding: 0 2em;
   }
 
+}
+
+#video-container {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  border: none !important;
+  overflow: hidden;
+  object-fit: contain;
+
+  vg-player {
+    display: flex;
+    justify-content: center;
+  }
+
+  vg-player video {
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 500px;
+    background-color: var(--ion-color-light);
+  }
+
+  .video-background {
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+    // -moz-background-size: cover;
+    // -o-background-size: cover;
+    overflow: hidden;
+    width: 100%;
+    height: 500px;
+  }
+
+  video {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    object-fit: cover;
+    z-index: 1;
+  }
+}
+
+#volume-controls {
+  position: absolute;
+  top: calc(100% - 40px);
+  right: calc(0% + 15px);
+  color: var(--ion-color-light);
+  background: rgba(0, 0, 0, 0.70);
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+  cursor: pointer;
+
+  ion-icon {
+    width: 15px !important;
+    height: 15px !important;
+  }
+}
+
+#replay-controls {
+  position: absolute;
+  top: calc(50% - 24px);
+  right: calc(50% - 75px);
+  color: white;
+  background: rgba(0, 0, 0, 0.8);
+  border-radius: 20px;
+  width: 150px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  z-index: 5;
+  cursor: pointer;
+
+  p {
+    margin: 0.5em 1em;
+  }
+}
+
+#play-controls {
+  position: absolute;
+  top: calc(100% - 40px);
+  left: calc(0% + 15px);
+  padding: 0px;
+  color: var(--ion-color-light);
+  background: rgba(0, 0, 0, 0.70);
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+  cursor: pointer;
+
+  ion-icon {
+    width: 15px !important;
+    height: 15px !important;
+  }
 }
