fixes cors for cloudfront

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -357,7 +357,7 @@ ion-row {
 
 #video-container {
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 500px;
   border: none !important;
   overflow: hidden;
