--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -22,16 +22,12 @@ ion-infinite-scroll {
     z-index: 25 !important;
 }
 
-
-
-
 #video-container {
     position: relative;
     width: 100%;
     height: 500px;
     border: none !important;
     overflow: hidden;
-    object-fit: contain;
 
     vg-player {
         display: flex;
@@ -42,33 +38,18 @@ ion-infinite-scroll {
         object-fit: cover;
         margin: 0;
         padding: 0;
-        width: 100vw;
+        width: 100%;
         height: 500px;
         background-color: var(--ion-color-light);
+        background-size: cover;
     }
 
-    .video-background {
-        position: relative;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        -webkit-background-size: cover;
-        // -moz-background-size: cover;
-        // -o-background-size: cover;
-        overflow: hidden;
-        width: 100%;
-        height: 500px;
-    }
-    
-    video {
-        height: 100%;
-        width: 100%;
-        position: relative;
-        object-fit: cover;
-        z-index: 1;
-    }
 }
 
+video {
+    display: flex;
+    justify-content: center;
+}
 
 
 #volume-controls {
@@ -158,10 +139,8 @@ ion-row {
 ion-card {
     max-width: 500px;
     margin: 0 auto;
-    padding: 0 !important;
-    margin: 1em auto !important;
-    border-radius: 0 !important;
-    box-shadow: none !important;
+    padding: 1em 0em !important;
+    margin: 0.25em auto !important;
 }
 
 ion-card-header {
