--- a/src/global.scss
+++ b/src/global.scss
@@ -264,3 +264,8 @@ alert-wrapper.sc-ion-alert-ios {
     opacity: 0;
     z-index: 10;
 }
+
+// .native-textarea.sc-ion-textarea-ios {
+//     width: 48vw !important;
+//     height: 100% !important;
+// }
