--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -357,7 +357,7 @@ ion-row {
 
 #video-container {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 500px;
   border: none !important;
   overflow: hidden;
@@ -372,7 +372,7 @@ ion-row {
     object-fit: cover;
     margin: 0;
     padding: 0;
-    width: 100vw;
+    width: 100%;
     height: 500px;
     background-color: var(--ion-color-light);
   }
