--- a/src/app/modals/create-media-modal/create-media-modal.page.scss
+++ b/src/app/modals/create-media-modal/create-media-modal.page.scss
@@ -1,54 +1,149 @@
-img {
-    max-width: 100%;
-    border: 0;
-    max-height: 300px;
+ion-toolbar {
+    ion-note {
+        font-weight: 600;
+    }
+}
+
+.form-wrapper {
+    height: 100%;
+    width: 100% !important;
     display: flex;
-    justify-content: center;
-    margin: 2em auto;
+    flex-direction: row;
 }
 
 ion-textarea {
-    --background: whitesmoke;
-    --padding: 1em;
-    --padding-start: 1em;
-    --border-radius: 10px;
-}
-
-ion-item {
-    margin: auto 0.5em auto 0em !important;
-}
-
-.comment-textarea {
-    border-radius: 10px;
-    padding: 0.25em 1em;
-    min-width: 100%;
-    min-height: 7em;
-    margin: auto;
-    font-size: 0.85em;
-}
-
-.comment-label {
-    margin: 0em auto 1em auto;
-}
-
-.button-class {
+    --background: var(--ion-color-light);
+    --padding: 1em 0.5em;
+    --padding-start: 1.5em;
     display: flex;
-    justify-content: space-between;
-    max-width: 325px !important;
-    margin: auto;
+    align-items: flex-start;
+    height: 100% !important;
+    font-size: 0.8em;
 }
 
-.cancel {
-    font-weight: 600;
-    color: indianred;
+.input-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    justify-content: center;
+    border-bottom: 1px solid var(--ion-color-medium);
 }
 
-.post {
-    font-weight: 600;
-    margin-left: -2em;
+.swiper-zoom-container {
+    height: 275px;
+    background: var(--ion-color-light);
+
+    img {
+        height: 275px;
+        object-fit: cover;
+    }
 }
 
-.video-div {
-    width: 400px;
-    height: 400px;
+#video-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border: none !important;
+    overflow: hidden;
+    object-fit: contain;
+
+    vg-player {
+        display: flex;
+        justify-content: center;
+    }
+
+    vg-player video {
+        object-fit: cover;
+        margin: 0;
+        padding: 0;
+        width: 200px;
+        height: 250px;
+        background-color: var(--ion-color-light);
+    }
+
+    .video-background {
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        -webkit-background-size: cover;
+        overflow: hidden;
+        width: 100%;
+        height: 200px;
+    }
+
+    video {
+        height: 250px;
+        width: 100%;
+        position: relative;
+        object-fit: cover;
+        z-index: 1;
+    }
+}
+
+
+
+#volume-controls {
+    position: absolute;
+    top: calc(100% - 40px);
+    right: calc(0% + 15px);
+    color: var(--ion-color-light);
+    background: rgba(0, 0, 0, 0.70);
+    border-radius: 50%;
+    height: 25px;
+    width: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+    cursor: pointer;
+
+    ion-icon {
+        width: 15px !important;
+        height: 15px !important;
+    }
+}
+
+#replay-controls {
+    position: absolute;
+    top: calc(50% - 24px);
+    right: calc(50% - 60px);
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 20px;
+    width: 120px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    z-index: 5;
+    cursor: pointer;
+    font-size: 0.75em;
+
+    p {
+        margin: 0.5em 1em;
+    }
+}
+
+#play-controls {
+    position: absolute;
+    top: calc(100% - 40px);
+    left: calc(0% + 15px);
+    padding: 0px;
+    color: var(--ion-color-light);
+    background: rgba(0, 0, 0, 0.70);
+    border-radius: 50%;
+    height: 25px;
+    width: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+    cursor: pointer;
+
+    ion-icon {
+        width: 15px !important;
+        height: 15px !important;
+    }
 }
