--- a/src/app/pages/message-board/message-board.page.html
+++ b/src/app/pages/message-board/message-board.page.html
@@ -87,14 +87,14 @@
       </div>
 
       <div class="pitcher-duel" *ngIf="post.sportsgame.gameInfo.initialGameData.status.detailedState !== 'Final' && (post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Scheduled' || post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Pre-Game' || post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Warmup')">
-        <!-- <ion-card-subtitle>Starting Pitchers</ion-card-subtitle>
+        <ion-card-subtitle>Starting Pitchers</ion-card-subtitle>
         <div class="pregame-pitchers">
           <div class="left-side">
             <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{post.sportsgame.gameInfo.initialGameData.probablePitchers.away.id}}/spots/120"/></ion-avatar>
             <div class="stats-wrapper" *ngIf="(post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Scheduled' || post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Pre-Game' || post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Warmup')">
               <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.probablePitchers.away">{{post.sportsgame.gameInfo.initialGameData.probablePitchers.away.fullName}}</ion-note>
-              <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.probablePitchers.away">ERA {{post.sportsgame.gameInfo.startingAwayPitcherStats[0].stat.era}}</ion-note>
-              <ion-note *ngIf="post.sportsgame.gameInfo.startingAwayPitcherStats">({{post.sportsgame.gameInfo.startingAwayPitcherStats[0].stat.wins}}-{{post.sportsgame.gameInfo.startingAwayPitcherStats[0].stat.losses}})</ion-note>
+              <!-- <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.probablePitchers.away">ERA {{post.sportsgame.gameInfo.startingAwayPitcherStats[0].stat.era}}</ion-note>
+              <ion-note *ngIf="post.sportsgame.gameInfo.startingAwayPitcherStats">({{post.sportsgame.gameInfo.startingAwayPitcherStats[0].stat.wins}}-{{post.sportsgame.gameInfo.startingAwayPitcherStats[0].stat.losses}})</ion-note> -->
             </div>
           </div>
           <div class="right-side">
@@ -102,13 +102,13 @@
             <div class="stats-wrapper">
               <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.status.detailedState !== 'In Progress' && post.sportsgame.gameInfo.initialGameData.status.detailedState !== 'Final' && !post.sportsgame.gameInfo.initialGameData.probablePitchers.home">TBD</ion-note>
               <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.status.detailedState !== 'In Progress' && post.sportsgame.gameInfo.initialGameData.status.detailedState !== 'Final' && post.sportsgame.gameInfo.initialGameData.probablePitchers.home">{{post.sportsgame.gameInfo.initialGameData.probablePitchers.home.fullName}}</ion-note>
-              <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.probablePitchers.home">ERA {{post.sportsgame.startingHomePitcherStats[0].stat.era}}</ion-note> -->
+              <!-- <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.probablePitchers.home">ERA {{post.sportsgame.startingHomePitcherStats[0].stat.era}}</ion-note> -->
               <!-- <ion-note>({{post.sportsgame.gameInfo.startingHomePitcherStats[0].stat.wins}}-{{post.sportsgame.gameInfo.startingHomePitcherStats[0].stat.losses}})</ion-note> -->
-            <!-- </div>
-          </div> -->
-        <!-- </div> -->
+            </div>
+          </div>
+        </div>
 
-        <!-- <div class="pregame-pitchers" *ngIf="pitcherInfo == 0">
+        <div class="pregame-pitchers" *ngIf="pitcherInfo == 0">
           <div class="left-side">
             <ion-avatar class="tbd-avatar-left"><img src="../../../assets/avatar.svg" /></ion-avatar>
             <div class="stats-wrapper">
@@ -121,7 +121,7 @@
             </div>
             <ion-avatar class="tbd-avatar-right"><img src="../../../assets/avatar.svg" /></ion-avatar>
           </div>
-        </div> -->
+        </div>
       </div>
       <div class="final-pitchers" *ngIf="post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Final' && post.sportsgame.gameInfo.finalData">
         <div class="duel">
